src/docbook/Person.bnf
lower ::= a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r

upper ::= A | B | C  | D | E | F | G | H | I | J | K | L | M | N | O | P |  Q | R | S | T | U | V | W | X | Y | Z

digit ::= 0 |1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9

natural ::= {digit}*

age ::= <natural>

firstName ::= <upper> . {<lower>}*

surname ::= <upper> . <lower> . <lower> . <lower> . <lower> . <lower> . {<lower>}*

gender ::= m | f

phoneBody ::= {<digit> | . | -}*

phone ::= <digit> . <phoneBody> . #

person ::= <age> . <firstName> . <surname> . <gender> . <phone>
